Subdivide a hair segment causes the high light to appear at the wrong place #62730

Closed
opened 2019-03-19 02:42:37 +01:00 by Lance Phan · 12 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81

Blender Version
Broken: version: 2.80 (sub 50), branch: master, commit date: 2019-03-18 20:40, hash: ce09b93955
Worked:
Subdivide the entire hair does not cause the problem, the highlight appear at the correct place.

Short description of error
In Particle edit mode, subdivide a segment of the hair will cause the selection highlight appear at the wrong part.

Exact steps for others to reproduce the error
With the default cube, add a hair system, reduce the number to 1, switch to particle edit mode, select 2 connecting vertices, then subdivide.
Now if you select an individual vertex, the highlight appear at the wrong place

Zalo_ScreenShot_19_3_2019_137763.png

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81 **Blender Version** Broken: version: 2.80 (sub 50), branch: master, commit date: 2019-03-18 20:40, hash: `ce09b93955` Worked: Subdivide the entire hair does not cause the problem, the highlight appear at the correct place. **Short description of error** In Particle edit mode, subdivide a segment of the hair will cause the selection highlight appear at the wrong part. **Exact steps for others to reproduce the error** With the default cube, add a hair system, reduce the number to 1, switch to particle edit mode, select 2 connecting vertices, then subdivide. Now if you select an individual vertex, the highlight appear at the wrong place ![Zalo_ScreenShot_19_3_2019_137763.png](https://archive.blender.org/developer/F6846980/Zalo_ScreenShot_19_3_2019_137763.png)
Author

Added subscriber: @ssendam

Added subscriber: @ssendam

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-19 15:53:29 +01:00

@Sergey as always, feel free to reassign if this is not for you.

@Sergey as always, feel free to reassign if this is not for you.

@ZedDB, not sure i am properly understanding the issue here (could be multiple ones). Mind testing the patch? fix_T62730.patch

@ZedDB, not sure i am properly understanding the issue here (could be multiple ones). Mind testing the patch? [fix_T62730.patch](https://archive.blender.org/developer/F6850134/fix_T62730.patch)

@Sergey the issue is that the highlight on the line seem to be centered around the wrong center point.
(However, your patch fixed a refresh issue, the hair geometry now updates after the subdiv command. So be sure to include it too)

Correctly centered before subdivide:
part1.png

Shifted highlight after subdivide:
part2.png

Test file:
hair_vert_sub.blend

This highlight offset issue also seems to happen in 2.79 btw.

@Sergey the issue is that the highlight on the line seem to be centered around the wrong center point. (However, your patch fixed a refresh issue, the hair geometry now updates after the subdiv command. So be sure to include it too) Correctly centered before subdivide: ![part1.png](https://archive.blender.org/developer/F6850696/part1.png) Shifted highlight after subdivide: ![part2.png](https://archive.blender.org/developer/F6850701/part2.png) Test file: [hair_vert_sub.blend](https://archive.blender.org/developer/F6850644/hair_vert_sub.blend) This highlight offset issue also seems to happen in 2.79 btw.
Author

This highlight offset issue also seems to happen in 2.79 btw.

In Blender 2.79, the wrong highlight is a different issue, it is because of the low path steps, regardless of subdivide or not. Increase the path steps will solve the issue. This also happens in 2.8.
If you set the hair segments to 7 and path steps to 2, you can see it very clearly in both 2.79 and 2.8.

The subdivide issue is different, increasing the path steps doesn't help

> This highlight offset issue also seems to happen in 2.79 btw. In Blender 2.79, the wrong highlight is a different issue, it is because of the low path steps, regardless of subdivide or not. Increase the path steps will solve the issue. This also happens in 2.8. If you set the hair segments to 7 and path steps to 2, you can see it very clearly in both 2.79 and 2.8. The subdivide issue is different, increasing the path steps doesn't help
Sergey Sharybin removed their assignment 2019-03-20 12:05:26 +01:00
Clément Foucault was assigned by Sergey Sharybin 2019-03-20 12:05:26 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

@fclem , as far as i know the highlight is handled by the drawing code, which i am not familiar with. The annoying part is that the highlight is somewhat decoupled from control points, but think it should be possible to have it behave similar to 2.79.
Mind having a look?

P.S. I've committed my fix for the refresh issue.

@fclem , as far as i know the highlight is handled by the drawing code, which i am not familiar with. The annoying part is that the highlight is somewhat decoupled from control points, but think it should be possible to have it behave similar to 2.79. Mind having a look? P.S. I've committed my fix for the refresh issue.
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Looks like the drawing code expects that the points are uniformly spaced along the hair strand.

Looks like the drawing code expects that the points are uniformly spaced along the hair strand.
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:34:53 +01:00

This issue was referenced by b2034c6ba2

This issue was referenced by b2034c6ba245e131e6ecabe33ca9afa1e6394247
Clément Foucault self-assigned this 2020-01-28 18:28:38 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62730
No description provided.