Fix missing refresh when subdividing hair strand

This is a part of T62730.i